--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     "require": {
         "php": "^8.1",
         "illuminate/contracts": "^10.0",
+        "illuminate/mail": "^10.0",
+        "illuminate/queue": "^10.0",
+        "illuminate/bus": "^10.0",
         "illuminate/support": "^10.0",
         "spatie/mjml-php": "^1.0"
     },
